--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -128,23 +128,106 @@ a {
 }
 
 /* MEGAMENU1 */
-.mega-menu {
-  width: 82rem;
-  height: 24rem;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-   position: relative;
-  left: -55rem !important;
-  right: 10% !important; /* opens to the left */
+.Mega-dropdown {
+    position: relative;
 }
 
-/* Force menu to open left or right, independent of Bootstrap classes */
-/* .custom-align-left {
-    position: relative;
-  left: -58rem !important;
-  right: 10% !important;
-} */
+.dropdown-menu {
+    top: 100%;
+    left: 0;
+    display: none;
+    position: absolute;
+
+}
+
+
+.mega-menu {
+    padding: 20px;
+    top: 100%;
+    left: 13rem;
+    display: none;
+    position: absolute;
+    width: 76%;
+
+
+}
+
+.backS-card {
+    margin-bottom: 20px;
+    z-index: 1;
+}
+
+.bimg {
+    padding: 20px;
+}
+
+.backS-card-text .a {
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.backS-card-text .b {
+    color: #007bff;
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+.border {
+    padding: 15px;
+    border-radius: 8px;
+    transition: box-shadow 0.3s ease;
+}
+
+.border:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+/* mega/category */
+.Megacat-card {
+    width: 12rem;
+    background-color: rgba(255, 182, 193, 0.367);
+    border-radius: 1rem;
+
+}
+
+.Megacat-card p {
+    color: #333;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.Megacat-card p:hover {
+    color: #8c0d4f;
+    transform: translateX(1.5rem);
+    -webkit-transform: translateX(1.5rem);
+    -moz-transform: translateX(1.5rem);
+    -ms-transform: translateX(1.5rem);
+    -o-transform: translateX(1.5rem);
+}
+
+.Megacat-card p:hover i {
+    color: #8c0d4f;
+    /* Icon also changes */
+}
+/* IMGS */
+.mega-img {
+  height: 200px;             /* fixed height of the image container */
+  overflow: hidden;          /* crop anything that overflows */
+  display: flex;
+  justify-content: center;   /* center the image horizontally */
+  align-items: center;       /* center the image vertically */
+}
+
+.mega-img img {
+  height: 260px;             /* bigger than container, so it's zoomed */
+  object-fit: cover;         /* crop the image */
+}
+
+
+
 
 
 
@@ -389,7 +472,7 @@ a {
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
-    
+
 }
 
 #sale-count div {
