--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -141,67 +141,54 @@ a {
 
 
 .dropdown-hover-wrapper {
-  position: relative;
+    position: relative;
 }
 
 .mega-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: -40%;
-  transform: translateX(-64%);
-  width: 80rem;
-  height: 30rem;
-  background-color: white;
-  padding: 20px;
-  z-index: 9999;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-  -webkit-transform: translateX(-64%);
-  -moz-transform: translateX(-64%);
-  -ms-transform: translateX(-64%);
-  -o-transform: translateX(-64%);
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: -40%;
+    transform: translateX(-64%);
+    width: 80rem;
+    height: 30rem;
+    background-color: white;
+    padding: 20px;
+    z-index: 9999;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+    -webkit-transform: translateX(-64%);
+    -moz-transform: translateX(-64%);
+    -ms-transform: translateX(-64%);
+    -o-transform: translateX(-64%);
 }
 
-.mega-menu-two{
+.mega-menu-two {
 
-     display: none;
-  position: absolute;
-  top: 100%;
-  left: -40%;
-  transform: translateX(-64%);
-  width: 80rem;
-  height: 30rem;
-  background-color: white;
-  padding: 20px;
-  z-index: 9999;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-  -webkit-transform: translateX(-78%);
-  -moz-transform: translateX(-64%);
-  -ms-transform: translateX(-64%);
-  -o-transform: translateX(-64%);
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: -40%;
+    transform: translateX(-64%);
+    width: 80rem;
+    height: 30rem;
+    background-color: white;
+    padding: 20px;
+    z-index: 9999;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+    -webkit-transform: translateX(-78%);
+    -moz-transform: translateX(-64%);
+    -ms-transform: translateX(-64%);
+    -o-transform: translateX(-64%);
 }
 
-.dropdown-hover-wrapper:hover .mega-menu  {
-  display: block !important;
+.dropdown-hover-wrapper:hover .mega-menu {
+    display: block !important;
 }
-.dropdown-hover-wrapper:hover .mega-menu-two  {
-  display: block !important;
+
+.dropdown-hover-wrapper:hover .mega-menu-two {
+    display: block !important;
 }
-.category-links {
-    display: flex;
-    flex-direction: initial;   
-}
-.link-row{
-   
-    width: 12rem;
-    border: 1px solid black;
-    gap: 2rem;
-}
-.link-row a{
-    gap: 2rem;
-    font-size: 1.5rem;
-    
-}
+
 
 
 
@@ -296,6 +283,81 @@ a {
     /* crop the image */
 }
 
+/* megamenu2 */
+.category-links p {
+    font-size: 1.1rem;
+    font-family: quicksand, sans-serif;
+    font-weight: 600;
+}
+
+.category-links li {
+    list-style: none;
+    font-size: 1rem;
+    gap: 2rem;
+    margin-bottom: 1rem;
+}
+
+.category-links {
+    display: flex;
+    flex-direction: initial;
+}
+
+.link-row {
+
+    width: 16rem;
+
+    gap: 3rem;
+}
+
+.link-row a {
+    gap: 2rem;
+    font-size: 1.5rem;
+
+}
+
+.Mega2-img {
+
+    z-index: 34;
+    background-color: #cccbcb;
+    width: 20rem;
+    height: 22rem;
+    border-radius: 1rem;
+    justify-items: center;
+    align-items: center;
+  
+}
+.Mega2-img img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    bottom: 12.9rem;
+}
+.img-text{
+    position: relative;
+    z-index: 12;
+    top: 5rem;
+    width: 7rem;
+    right: 3rem;
+}
+.img-text p{
+    font-size: 2.2rem;
+    color: #8c0d4f;
+    font-family: quicksand, sans-serif;
+    font-weight: 800;
+    text-wrap: pretty;
+}
+.img-text button{
+    background-color: #8c0d4f;
+    color: white;
+    border: none;
+    width: 7rem;
+    height: 2rem;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
 
 
 
@@ -360,7 +422,7 @@ a {
     -o-transform: scale(1.05);
 }
 
-.brandcarousel-container:hover .brandcarousel-track {
+3 .brandcarousel-container:hover .brandcarousel-track {
     animation-play-state: paused;
 }
 
