--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -34,40 +34,42 @@ a {
 
 #home-navbar .nav-link span {
     position: relative;
-    display: inline-block; /* Ensure it's treated like a box */
+    display: inline-block;
+    /* Ensure it's treated like a box */
 }
 
-#home-navbar .nav-link span::after{
+#home-navbar .nav-link span::after {
     content: "";
     position: absolute;
-    top:28px;
+    top: 28px;
     left: 0;
     width: 100%;
     background-color: black;
     height: 2px;
 }
-.backbtn:hover
 
-.nav-link {
-    color: black!important;
+.backbtn:hover .nav-link {
+    color: black !important;
 
 }
 
 /* store navbar/ user */
-.cart-item-remove{
+.cart-item-remove {
     margin-left: 2rem;
 }
 
 
-.cart-item-image{
+.cart-item-image {
     width: 8rem;
-   margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
-.cartbtn{
+
+.cartbtn {
     border: none;
     background-color: transparent;
 }
-.cartbtn:hover{
+
+.cartbtn:hover {
     color: #8c0d4f;
     cursor: pointer;
 }
@@ -348,29 +350,33 @@ a {
     border-radius: 1rem;
     justify-items: center;
     align-items: center;
-  
+
 }
-.Mega2-img img{
+
+.Mega2-img img {
     position: relative;
     width: 100%;
     height: 100%;
     bottom: 12.9rem;
 }
-.img-text{
+
+.img-text {
     position: relative;
     z-index: 12;
     top: 5rem;
     width: 7rem;
     right: 3rem;
 }
-.img-text p{
+
+.img-text p {
     font-size: 2.2rem;
     color: #8c0d4f;
     font-family: quicksand, sans-serif;
     font-weight: 800;
     text-wrap: pretty;
 }
-.img-text button{
+
+.img-text button {
     background-color: #8c0d4f;
     color: white;
     border: none;
@@ -1344,12 +1350,11 @@ a {
 
 
 /* footer */
-
-.footer {
-    padding-top: 4rem;
-    padding-bottom: 3rem;
-    padding-left: 2.89rem;
+.footer-main {
+    background-color: #f8f4f6;
+      
 }
+
 
 .social-icons {
     display: flex;
@@ -1398,11 +1403,40 @@ a {
     color: #8c0d4f;
 }
 
+
 .footer-widget h4 {
+    position: relative;
     font-family: quicksand, sans-serif;
     font-weight: 600;
     color: #8c0d4f;
+    left: 2rem;
+    margin-bottom: 4px;
 }
+.footer-widget h4::after {
+    content: "";
+    position: relative;
+    top: 6px;
+    left: 10%;
+    width: 16%;
+    height: 4px;
+    background-color: #8c0d4f;
+    height: 2px;
+    display: block; /* Add this to make the pseudo-element appear */
+    transform: translateX(-50%); /* Center it */
+}
+
+.footer-contact{
+    position: relative;
+    left: 2rem;
+}
+.contact-item {
+  display: flex;
+  align-items: flex-start; 
+  gap: 10px; 
+  line-height: 1.5;
+}
+
+
 
 .app-btn {
     position: relative;
@@ -1419,7 +1453,7 @@ a {
 
 .app-btn:hover {
     background-color: #8c0d4f;
-    color: white;
+    color: white !important;
 }
 
 .payment-methods {
