--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -284,19 +284,25 @@ a:hover {
 
 /* mega/category */
 .Megacat-card {
-    width: 12rem;
+    width: 14rem;
     background-color: rgba(255, 182, 193, 0.367);
     border-radius: 1rem;
-
+  
+}
+.Megacat-card h6{
+    color: #8c0d4f;
+    font-size: 1.5rem;
+    font-family: quicksand, sans-serif;
+    font-weight: 700;
+    padding-top: 1rem;
+    
 }
 
 .Megacat-card p {
     color: #333;
+    font-size: 1rem;
     transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
+    
 }
 
 .Megacat-card p:hover {
@@ -1445,6 +1451,11 @@ a:hover {
     color: #8c0d4f;
     left: 2rem;
     margin-bottom: 4px;
+}
+
+.footer-widget li{
+    font-size: .89rem;
+    width: 10rem;
 }
 
 .footer-widget h4::after {
